--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </div>
                         <div class="flex items-center text-green-300">
                             <i class="fas fa-check-circle mr-2"></i>
-                            <span>Robust Proxmox API communication</span>
+                            <span></span>
                         </div>
                         <div class="flex items-center text-green-300">
                             <i class="fas fa-check-circle mr-2"></i>
