--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     Proxmox Integration for WemX
                 </h1>
                 <p class="text-xl text-gray-300 max-w-2xl mx-auto">
-                    Advanced virtualization management system bringing Proxmox VE integration to WemX hosting platform
+                    Time line been delyed 14/08/2025
                 </p>
                 <div class="flex justify-center items-center mt-6 space-x-4">
                     <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-green-900 text-green-300">
