--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                     Proxmox Integration for WemX
                 </h1>
                 <p class="text-xl text-gray-300 max-w-2xl mx-auto">
-                    Time line been delyed 14/08/2025
-                </p>
+Still TBD when v1 will be released. Last updated: 28/08/2025.                </p>
                 <div class="flex justify-center items-center mt-6 space-x-4">
                     <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-green-900 text-green-300">
                         <i class="fas fa-code-branch mr-1"></i>
@@ -47,12 +46,12 @@
                     <div class="mb-6">
                         <div class="flex justify-between items-center mb-2">
                             <span class="text-lg font-medium text-gray-200">VM Cloning</span>
-                            <span class="text-sm font-medium text-green-400">85% Complete</span>
+                            <span class="text-sm font-medium text-green-400">99% Complete</span>
                         </div>
                         <div class="w-full bg-gray-700 rounded-full h-3">
-                            <div class="bg-gradient-to-r from-green-400 to-green-500 h-3 rounded-full transition-all duration-500" style="width: 85%"></div>
+                            <div class="bg-gradient-to-r from-green-400 to-green-500 h-3 rounded-full transition-all duration-500" style="width: 99%"></div>
                         </div>
-                        <p class="text-sm text-gray-400 mt-2">✔️ Mostly Working - Ready for production testing</p>
+                        <p class="text-sm text-gray-400 mt-2">✔️ Production Ready - Extensively tested and stable</p>
                     </div>
 
                     <!-- Current Capabilities -->
@@ -64,7 +63,7 @@
                         </div>
                         <div class="flex items-center text-green-300">
                             <i class="fas fa-check-circle mr-2"></i>
-                            <span>Support for multiple Proxmox nodes</span>
+                            <span>Real-time resource monitoring</span>
                         </div>
                         <div class="flex items-center text-green-300">
                             <i class="fas fa-check-circle mr-2"></i>
@@ -101,9 +100,13 @@
                     <!-- Planned Features -->
                     <div class="space-y-3">
                         <h3 class="text-lg font-semibold text-gray-200 mb-3">Planned Features</h3>
+                        <div class="flex items-center text-blue-300">
+                            <i class="fas fa-flask mr-2"></i>
+                            <span>Container (LXC) management - In Testing</span>
+                        </div>
                         <div class="flex items-center text-yellow-300">
                             <i class="fas fa-hourglass-half mr-2"></i>
-                            <span>Container (LXC) management</span>
+                            <span>Support for multiple Proxmox nodes</span>
                         </div>
                         <div class="flex items-center text-yellow-300">
                             <i class="fas fa-hourglass-half mr-2"></i>
@@ -112,10 +115,6 @@
                         <div class="flex items-center text-yellow-300">
                             <i class="fas fa-hourglass-half mr-2"></i>
                             <span>High Availability (HA) cluster support</span>
-                        </div>
-                        <div class="flex items-center text-yellow-300">
-                            <i class="fas fa-hourglass-half mr-2"></i>
-                            <span>Real-time resource monitoring</span>
                         </div>
                     </div>
                 </div>
@@ -303,10 +302,10 @@
             <div class="relative w-12 h-12">
                 <svg class="w-12 h-12 transform -rotate-90">
                     <circle cx="24" cy="24" r="20" stroke="currentColor" stroke-width="3" fill="transparent" class="text-gray-600"/>
-                    <circle cx="24" cy="24" r="20" stroke="currentColor" stroke-width="3" fill="transparent" stroke-dasharray="125.6" stroke-dashoffset="50.2" class="text-purple-500"/>
+                    <circle cx="24" cy="24" r="20" stroke="currentColor" stroke-width="3" fill="transparent" stroke-dasharray="125.6" stroke-dashoffset="37.7" class="text-purple-500"/>
                 </svg>
                 <div class="absolute inset-0 flex items-center justify-center">
-                    <span class="text-xs font-bold text-purple-400">60%</span>
+                    <span class="text-xs font-bold text-purple-400">70%</span>
                 </div>
             </div>
         </div>
