--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Still TBD when v1 will be released. Last updated: 28/08/2025.                </p
                 <div class="mt-4 p-4 bg-blue-900/30 border border-blue-500/30 rounded-lg">
                     <div class="flex items-center">
                         <i class="fas fa-video text-blue-400 mr-2"></i>
-                        <span class="text-blue-300">Demo video coming soon - currently being optimized for web deployment</span>
+                        <span class="text-blue-300">https://youtu.be/bJPU15kDLOU</span>
                     </div>
                 </div>
             </div>
