--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@ Still TBD when v1 will be released. Last updated: 28/08/2025.                </p
             const videoFrame = document.getElementById('videoFrame');
             
             // Set the YouTube embed URL
-            videoFrame.src = 'https://www.youtube.com/embed/bJPU15kDLOU?autoplay=1&rel=0&modestbranding=1';
+           videoFrame.src = 'https://www.youtube.com/embed/hswmKwieFqk?autoplay=1&rel=0&modestbranding=1';
+
             
             // Show the video modal
             videoModal.classList.remove('hidden');
