--- a/index.html
+++ b/index.html
@@ -329,6 +329,16 @@ Still TBD when v1 will be released. Last updated: 28/08/2025.                </p
         </div>
     </div>
 
+    <div class="text-center mt-6">
+  <p class="mb-2 text-sm text-gray-600">
+    Support the developer who is helping us build this service! All funds go directly to them, not Ewan.c.
+  </p>
+  <a href="https://buy.stripe.com/fZu7sM0AXaWbaiP5Ht5Rm0h" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors">
+    Support Us
+  </a>
+</div>
+
+
     <!-- Floating Progress Indicator -->
     <div class="fixed bottom-6 right-6">
         <div class="bg-gray-800 rounded-full p-4 shadow-2xl border border-gray-600">
